# JucyChordz

./: CLAUDE.md  CMakeLists.txt
.claude/: settings.local.json
.claude/docs/: architecture.md  data-model.md  launch-strategy.md  lilypond-export.md  recording-and-practice.md  theme-and-ui.md
Source/: AccuracyTimeChart.cpp  AccuracyTimeChart.h  ChordDetector.cpp  ChordDetector.h  ChordyKeyboardComponent.cpp  ChordySynth.cpp  ChordySynth.h  ChordyTheme.h  FolderModel.cpp  FolderModel.h  LibraryExporter.cpp  LibraryExporter.h  LilyPondExporter.cpp  LilyPondExporter.h  MelodyChartComponent.cpp  MelodyChartComponent.h  MelodyLibraryPanel.cpp  MelodyLibraryPanel.h  MelodyModel.cpp  MelodyModel.h  MidiFileUtils.cpp  MidiFileUtils.h  PlaceholderPanel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PracticePanel.cpp  PracticePanel.h  ProgressionChartComponent.cpp  ProgressionChartComponent.h  ProgressionLibraryPanel.cpp  ProgressionLibraryPanel.h  ProgressionModel.cpp  ProgressionModel.h  ProgressionRecorder.cpp  ProgressionRecorder.h  ScaleModel.cpp  ScaleModel.h  SpacedRepetition.cpp  (+9 more)
